src/styles/main.scss
@import './base.scss';
@import './mixin.scss';

#app {
  position: relative;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template: min-content auto min-content / min-content auto;
  grid-auto-flow: column;
  align-items: center;
}
*,
*::after,
*::before {
  box-sizing: border-box;
  border: unset;
  margin: unset;
  outline: unset;
  padding: unset;
}
a,
button {
  cursor: unset;
  display: flex;
  align-items: center;
  justify-content: center;
  background: unset;
  color: unset;
  line-height: unset;
  text-align: center;
  text-decoration: unset;
  transition: filter 0.25s linear;
  &:hover {
    filter: $FilterBright;
  }
}
b,
h1,
h2,
h3,
h4,
h5,
h6,
strong {
  font-weight: 700;
}
body {
  position: relative;
  padding-inline: 1.5 * $BaseSize;
  padding-bottom: 1.5 * $BaseSize;
  @include mediaQueryPortrait {
    padding-bottom: 0;
  }
  font-family: 'Noto Sans', sans-serif;
  height: 100vh;
  height: 100svh;
  width: 100vw;
  width: 100svw;
  background-color: $ColorJapaneseVioletShade;
  background-image: $ColorLinearBackground;
  background-repeat: no-repeat;
  color: $ColorTextWarm;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
html {
  line-height: $LineHeight;
  font-size: calc(8px + 0.8vmax + 0.08vmin);
  -webkit-text-size-adjust: 100%;
}
h1,
h2,
h3,
h4,
h5,
h6,
p,
span {
  overflow-wrap: break-word;
  word-break: break-all;
}
button,
input,
select,
textarea {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}
h1 {
  font-size: 300%;
}
h2 {
  font-size: 250%;
}
h3 {
  font-size: 200%;
}
h4 {
  font-size: 150%;
}
h5 {
  font-size: 125%;
}
h6 {
  font-size: 100%;
}

